[gd_scene load_steps=5 format=3 uid="uid://bw0oapmkf47f1"]

[ext_resource type="Script" path="res://levels/example/main_menu_example.gd" id="1_ms4k7"]
[ext_resource type="Texture2D" uid="uid://susf0ur67j3h" path="res://materials/textures/warning_background.png" id="2_wujuc"]
[ext_resource type="PackedScene" uid="uid://ckw4dv0xxi1wh" path="res://ui/menu_selection_container.tscn" id="3_do6o3"]
[ext_resource type="PackedScene" uid="uid://d32vr0askpuce" path="res://ui/menu_selection.tscn" id="4_axy38"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ms4k7")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.427451, 0.427451, 0.427451, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wujuc")

[node name="Menus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BaseMenuSelectionContainer" parent="Menus/MarginContainer" instance=ExtResource("3_do6o3")]
layout_mode = 2
theme_override_constants/separation = -8
title = "Example Menu"
title_font_size = 32

[node name="MenuSelection" parent="Menus/MarginContainer/BaseMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "Start"

[node name="MenuSelection2" parent="Menus/MarginContainer/BaseMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "Load game"

[node name="MenuSelection4" parent="Menus/MarginContainer/BaseMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "Options"

[node name="MenuSelection3" parent="Menus/MarginContainer/BaseMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "Exit"

[node name="LoadMenuSelectionContainer" parent="Menus/MarginContainer" instance=ExtResource("3_do6o3")]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = -8
menu_available = false
title = "Load save slot"
title_font_size = 32

[node name="MenuSelection" parent="Menus/MarginContainer/LoadMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "1"

[node name="MenuSelection2" parent="Menus/MarginContainer/LoadMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "2"

[node name="MenuSelection3" parent="Menus/MarginContainer/LoadMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "3"

[node name="MenuSelection4" parent="Menus/MarginContainer/LoadMenuSelectionContainer" instance=ExtResource("4_axy38")]
layout_mode = 2
selection_name = "Back"

[node name="MenuTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="MenuTimer"]
offset_right = 40.0
offset_bottom = 16.0
